Source/WebCore/platform/network/mac/ResourceRequestMac.mm
@@ -30,6 +30,7 @@
 #import "ResourceRequestCFNet.h"
 #import "RuntimeApplicationChecks.h"
 #import "WebCoreSystemInterface.h"
+#import <wtf/text/CString.h>
 
 #import <Foundation/Foundation.h>
 
@@ -187,7 +188,11 @@ void ResourceRequest::doUpdatePlatformRequest()
     }
 
 #if ENABLE(CACHE_PARTITIONING)
-    [NSURLProtocol setProperty:m_cachePartition forKey:(NSString *)wkCachePartitionKey() inRequest:nsRequest];
+    String partition = cachePartition();
+    if (!partition.isNull() && !partition.isEmpty()) {
+        NSString *partitionValue = [NSString stringWithUTF8String:partition.utf8().data()];
+        [NSURLProtocol setProperty:partitionValue forKey:(NSString *)wkCachePartitionKey() inRequest:nsRequest];
+    }
 #endif
 
     m_nsRequest.adoptNS(nsRequest);
